--- a/templates/ReadMsg.html
+++ b/templates/ReadMsg.html
@@ -6,8 +6,8 @@
         <br> <br> <br> <br> <br> <br> <br> <br> <br>
         
         
-        <div style="background-image: url(KakaoTalk_20221113_003629610.jpg);width: 800; height: 500;background-size: 100% 100%;"> <!--이미지 꽉차게-->
-            <img src="c:\prj_Birthday\KakaoTalk_20221113_000841703.jpg" width="40" height="120" 
+        <div style="background-image: url(/static/img/cake.jpg);width: 800; height: 500;background-size: 100% 100%;"> <!--이미지 꽉차게-->
+            <img src="{{ url_for('static', filename='img/candle0.jpg') }}" width="40" height="120" 
             style="
             left: 200px;
             position: absolute;
