--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,12 @@
     </head>
 
     <body>
-        <button  onClick="location.href='CreateCake.html'"" > Create My Cake
+        <button  onClick="location.href='/CreateCake'" > Create My Cake
         </button>
         <br>
-        <button onClick="location.href='WriteMsg.html'" > Write </button>
+        <button onClick="location.href='/WriteMsg'" > Write </button>
         <br>
-        <button onClick="location.href='ReadMsg.html'" > Read </button>
+        <button onClick="location.href='/ReadMsg'" > Read </button>
         <br>
         <button onclick="alert('복사 완료!');CopyUrlToClipboard()"> Share </button>
 
