--- a/templates/CreateCake.html
+++ b/templates/CreateCake.html
@@ -4,10 +4,11 @@
 
     </head>
     <body>
-        <form>
+        <form action = "/user_info" method = "POST">
             Name: <input type = "text" name="name"/>
-            Age: <input type = "text" name="age"/>
+            Birth(ex) 2001-03-07 00:00:00): <input type = "text" name="Birth"/>
             <br><button> Enter </button>
+
         </form>
         
     </body>
